@@ -1,3 +1,7 @@
+2009-01-14  Dmitry Dulepov  <dmitry@typo3.org>
+
+	* Added base view and controller classes
+
 2009-01-13  Dmitry Dulepov  <dmitry@typo3.org>
 
 	* Implementation of FE controller: created base functions and configuration processing
